@@ -120,26 +120,26 @@ reallyclean: clean
 	rm -f diskusage*.txt all-*.utf *.bdf
 	rm -f sources.list sources.list.udeb sources.list.deb
 
-# Auto-generate a sources.list.
-sources.list:
-	( \
-	echo "# This file is automatically generated, edit sources.list.local instead."; \
-	if [ "$(MIRROR)x" != "x" ]; then \
-		echo "deb $(MIRROR) $(SUITE) main/debian-installer"; \
-	else \
-	cat $(SYSTEM_SOURCES_LIST) | grep ^deb\  |grep -v file:/ | grep -v debian-non-US | grep ' main' | grep -v 'security.debian.org' | \
-		awk '{print $$1 " " $$2}' | sed s/\\/*\ *$$/\ $(SUITE)\ main\\/debian-installer/ | uniq; \
-	fi; \
-	) > sources.list
-
+# Auto-generate a sources.list.type
 sources.list.udeb:
 	( \
 	echo "# This file is automatically generated, edit sources.list.udeb.local instead."; \
 	if [ "$(MIRROR)x" != "x" ]; then \
 		echo "deb $(MIRROR) $(SUITE) main/debian-installer"; \
 	else \
-	cat $(SYSTEM_SOURCES_LIST) | grep ^deb\  |grep -v file:/ | grep -v debian-non-US | grep ' main' | grep -v 'security.debian.org' | \
-		awk '{print $$1 " " $$2}' | sed s/\\/*\ *$$/\ $(SUITE)\ main\\/debian-installer/ | uniq; \
+	cat $(SYSTEM_SOURCES_LIST) | grep ^deb\  | grep -v debian-non-US | grep ' main' | grep -v 'security.debian.org' | \
+		awk '{print $$1 " " $$2}' | sed "s,/* *$$, $(SUITE) main/debian-installer," | sed "s,^deb file,deb copy," | uniq; \
+	fi; \
+	) > sources.list.udeb
+
+sources.list.deb:
+	( \
+	echo "# This file is automatically generated, edit sources.list.deb.local instead."; \
+	if [ "$(MIRROR)x" != "x" ]; then \
+		echo "deb $(MIRROR) $(SUITE) main"; \
+	else \
+	cat $(SYSTEM_SOURCES_LIST) | grep ^deb\  | grep -v debian-non-US | grep ' main' | grep -v 'security.debian.org' | \
+		awk '{print $$1 " " $$2}' | sed "s,/* *$$, $(SUITE) main," | sed "s,^deb file,deb copy," | uniq; \
 	fi; \
 	) > sources.list.udeb
 
@@ -206,7 +206,7 @@ $(TYPE)-tree-stamp: $(TYPE)-get_udebs-stamp debian/control
 	# need them, yet anyway.
 	find $(TREE)/lib/modules/ -name 'modules*' \
 		-not -name modules.dep -not -type d | xargs rm -f
-	
+
 	# Create a dev tree
 	mkdir -p $(TREE)/dev
 ifdef USERDEVFS
@@ -261,7 +261,7 @@ ifeq ($(TYPE),floppy)
 		fi; \
 	done
 endif
-	
+
 	# Library reduction.
 	mkdir -p $(TREE)/lib
 	$(MKLIBS) -v -d $(TREE)/lib --root=$(TREE) `find $(TEMP) -type f -perm +0111 -o -name '*.so'`
@@ -303,7 +303,7 @@ ifdef NO_I18N
 		mv temp $$FILE; \
 	done
 endif
-	
+
 	# If the image has pcmcia, reduce the config file to list only
 	# entries that there are modules on the image. This saves ~30k.
 	if [ -e $(TREE)/etc/pcmcia/config ]; then \
